<resources>
    <string name="app_name">Specimen Hunter</string>
    
    <string name="new_capture">New Capture</string>
    <string name="all_captures">All Captures</string>
    <string name="personal_bests">Personal Bests</string>
    <string name="targets">Targets</string>
    <string name="species">Species</string>
    
    
    <string name="species_and_weight_imperial">%1$s of %2$d lbs, %3$d oz, %4$d drms</string>
    <string name="species_and_weight_metric">%1$s of %2$d kg, %3$d grms</string>
    <string name="weight_imperial">%1$d lbs, %2$d oz, %3$d drms</string>
    <string name="weight_metric">%1$d kg, %2$d grms</string>
    
    <string name="capture_title">Capture Title</string>
    <string name="species">Species</string>
    <string name="pounds">lbs</string>
    <string name="ounces">oz</string>
    <string name="drams">drms</string>
    <string name="kilograms">kg</string>
    <string name="photo">Photo</string>
    <string name="comment">Comment</string>
    <string name="save">Save</string>
    
    
    <string name="photo_picker_unavailable">Photos unavailable. Cannot read and write storage. Please ensure SD card is available and the device is not connected to a computer.</string>
    
<!--     <string-array name="sort_options"> -->
<!--         <item>Sort by title</item> -->
<!--         <item>Sort by species</item> -->
<!--         <item>Sort by weight</item> -->
<!--     </string-array> -->
    
    <string name="sort_title">Sort by title</string>
    <string name="sort_species">Sort by species</string>
    <string name="sort_weight">Sort by weight</string>
</resources>
