<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/capture_title" />
	    
	    <EditText
	        android:id="@+id/edittext_title"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="text" />
	        
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/species" />
	    
	    <Spinner
	        android:id="@+id/spinner_species"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" />
	    
	    <com.samcoles.specimenhunter.ui.widget.WeightInput 
	        android:id="@+id/weight_input"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" />
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/photo" />
	    
	    <com.samcoles.specimenhunter.ui.widget.PhotoPicker
	        android:id="@+id/photo_picker"
	        android:layout_width="match_parent"
	        android:layout_height="200dp" />
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/comment" />
	    
	    <EditText
	        android:id="@+id/edittext_comment"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textMultiLine" />
	    
	    <Button 
	        android:id="@+id/button_save"
	        android:layout_width="match_parent" 
	        android:layout_height="wrap_content"
	        android:text="@string/save" />
    </LinearLayout>    

</ScrollView>