<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
	    <TextView
	        android:id="@+id/textview_pounds"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/pounds" />
	    
	    <EditText
	        android:id="@+id/edittext_pounds"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="number" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
	    <TextView
	        android:id="@+id/textview_ounces"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/ounces" />
	    
	    <EditText
	        android:id="@+id/edittext_ounces"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="number" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
	    <TextView
	        android:id="@+id/textview_drams"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/drams" />
	    
	    <EditText
	        android:id="@+id/edittext_drams"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="number" />
    </LinearLayout>
    

</merge>