<?xml version="1.0" encoding="utf-8"?>
<com.samcoles.specimenhunter.ui.widget.MenuScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	<LinearLayout
	    android:layout_width="200dip"
	    android:layout_height="fill_parent"
	    android:orientation="vertical">
	
	    <LinearLayout
	        android:id="@+id/fan_item_new_capture"
	        android:layout_width="match_parent"
	        android:layout_height="48dp"
	        android:background="@drawable/clickable"
	        android:clickable="true">             
	        <ImageView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/menu_new_capture" />
	        
	        <TextView
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:gravity="center_vertical"
	            android:text="@string/new_capture" />        
	    </LinearLayout>
	    
	    <LinearLayout
	        android:id="@+id/fan_item_all_captures"
	        android:layout_width="match_parent"
	        android:layout_height="48dp"
	        android:background="@drawable/clickable"
	        android:clickable="true">        
	        <ImageView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/menu_all_captures" />
	        
	        <TextView
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:gravity="center_vertical"
	            android:text="@string/all_captures" />        
	    </LinearLayout>
	    
	    <LinearLayout
	        android:id="@+id/fan_item_personal_bests"
	        android:layout_width="match_parent"
	        android:layout_height="48dp"
	        android:background="@drawable/clickable"
	        android:clickable="true">        
	        <ImageView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/menu_personal_bests" />
	        
	        <TextView
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:gravity="center_vertical"
	            android:text="@string/personal_bests" />        
	    </LinearLayout>
	    
	    <LinearLayout
	        android:id="@+id/fan_item_targets"
	        android:layout_width="match_parent"
	        android:layout_height="48dp"
	        android:background="@drawable/clickable"
	        android:clickable="true">        
	        <ImageView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/menu_targets" />
	        
	        <TextView
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:gravity="center_vertical"
	            android:text="@string/targets" />        
	    </LinearLayout>
	    
	    <LinearLayout
	        android:id="@+id/fan_item_species"
	        android:layout_width="match_parent"
	        android:layout_height="48dp"
	        android:background="@drawable/clickable"
	        android:clickable="true">        
	        <ImageView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/menu_species" />
	        
	        <TextView
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:gravity="center_vertical"
	            android:text="@string/species" />        
	    </LinearLayout>
	</LinearLayout>
</com.samcoles.specimenhunter.ui.widget.MenuScrollView>